fixed krybord height issue on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -21,8 +21,8 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   overflow-x: hidden;
-  max-height: 100dvh;
-  height: 100vh;
+  max-height: 100svh;
+  height: 100svh;
 }
 
 .room textarea {
